--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: Milkshake Apps
 email:
-description:  "App that make you life shake"
+description:  "Apps that make your life shake"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://milkshakeapps.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username:
